[gd_scene load_steps=7 format=3 uid="uid://bi3db3u4t6gm1"]

[ext_resource type="Script" uid="uid://dbtiv17vvd3dl" path="res://scenes/mushroom_house.gd" id="1_37ubo"]
[ext_resource type="Texture2D" uid="uid://fpbo30grw362" path="res://assets/sprites/objects/summer_and_spring.png" id="2_2ppoj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4mnpy"]
atlas = ExtResource("2_2ppoj")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ppoj"]
atlas = ExtResource("2_2ppoj")
region = Rect2(96, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bai3w"]
atlas = ExtResource("2_2ppoj")
region = Rect2(96, 0, 48, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ppoj"]
radius = 16.0
height = 80.0

[node name="MushroomHouse" type="StaticBody2D"]
script = ExtResource("1_37ubo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -15)
texture = SubResource("AtlasTexture_4mnpy")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -15)
polygon = PackedVector2Array(-27, 44, 29, 44, 30, 35, 31, 22, 31, 15, -29, 15, -29, 21, -28, 35)

[node name="ClosedDoorSprite" type="Sprite2D" parent="."]
position = Vector2(-8, 16)
texture = SubResource("AtlasTexture_2ppoj")

[node name="OpenedDoorSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-8, 16)
texture = SubResource("AtlasTexture_bai3w")

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, 24)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_2ppoj")

[node name="DoorPoint" type="Node2D" parent="."]
position = Vector2(-8, 16)

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
